[tool.poetry]
name = "graphene-test"
version = "0.1.0"
description = ""
authors = ["MURAKI Taichi <muraki.taichi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
graphene = ">=2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
